ultimos cambios del segundo sprint
