# mi-backend/src/routes/movimientos-routes.ts
@@ -1,6 +1,6 @@
 // src/routes/movimiento-routes.ts
 import { Router } from 'express';
-import { MovimientoController } from '../controllers/movimientos-controller';
+import { MovimientoController, StockController } from '../controllers/movimientos-controller';
 import { GlobalValidationMiddleware } from '../middleware/globalValidation.middleware';
 
 class MovimientoRoutes {
@@ -19,6 +19,8 @@ class MovimientoRoutes {
     this.router.post('/', MovimientoController.create);
     this.router.post('/producto', MovimientoController.getByProducto);
     this.router.post('/report/date-range', MovimientoController.getByDateRange);
+    this.router.post('/stock/verificar-alertas', StockController.verificarStockBajoManual);
+    this.router.get('/stock/bajo', StockController.obtenerProductosStockBajo);
   }
 }
 
